--- a/walkfit/templates/index.html
+++ b/walkfit/templates/index.html
@@ -182,7 +182,7 @@
             </div>
           </div>
           <div class="rounded-3xl overflow-hidden shadow-2xl">
-            <img src="https://images.unsplash.com/photo-1581129724994-6288d2a5f51e?auto=format&fit=crop&w=1200&q=80" 
+            <img src="https://i.pinimg.com/736x/16/4c/ee/164ceeaa80ce32538827b505c49b948a.jpg" 
                  alt="Progressive overload progression chart" class="w-full">
           </div>
         </div>
@@ -288,6 +288,9 @@
       <p class="mt-12 text-indigo-100 text-lg">
         No credit card • Cancel anytime • Real results or your time back
       </p>
+       <a href="/adlogin/" class="mt-12 text-indigo-100  rounded-2xl shadow-2xl text-lg">
+        Admin
+      </a>
     </div>
   </section>
 
