--- a/walkfit/templates/profile.html
+++ b/walkfit/templates/profile.html
@@ -115,7 +115,9 @@
               Goal: <span class="capitalize">{{ user.fitness_goal|default:"not set"|title }}</span>
             </p>
           </div>
-
+<a href="{% url 'manage_reminder' %}" class="bg-indigo-100 hover:bg-indigo-200 px-6 py-3 rounded-xl inline-flex items-center gap-2">
+  <i class="fas fa-bell"></i> Manage Daily Reminders
+</a>
           <div class="flex gap-4 justify-center pt-6">
             <a href="?edit=1" class="bg-indigo-600 text-white px-8 py-3 rounded-lg hover:bg-indigo-700 transition">
               Edit Profile
